--- a/TournamentApp/TournamentApp.csproj
+++ b/TournamentApp/TournamentApp.csproj
@@ -224,7 +224,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="images\Add-icon.png" />
     <Content Include="images\cz.gif" />
+    <Content Include="images\Delete-icon.png" />
     <Content Include="images\en.gif" />
     <Content Include="images\Success-icon.png" />
     <Content Include="Scripts\bootstrap.js" />
