--- a/TournamentApp/TournamentApp.csproj
+++ b/TournamentApp/TournamentApp.csproj
@@ -289,6 +289,8 @@
     <Content Include="Views\Tournament\Details.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\Url.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\UrlBlank.cshtml" />
+    <Content Include="Views\Group\Edit.cshtml" />
+    <Content Include="Views\Account\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -319,7 +321,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\Base\" />
-    <Folder Include="Views\Group\" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
