--- a/TournamentApp/TournamentApp.csproj
+++ b/TournamentApp/TournamentApp.csproj
@@ -197,12 +197,14 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="GlobalProps.cs" />
-    <Compile Include="Migrations\201511241021153_asd.cs" />
-    <Compile Include="Migrations\201511241021153_asd.Designer.cs">
-      <DependentUpon>201511241021153_asd.cs</DependentUpon>
+    <Compile Include="Migrations\201602221832354_AddFightTbl.cs" />
+    <Compile Include="Migrations\201602221832354_AddFightTbl.Designer.cs">
+      <DependentUpon>201602221832354_AddFightTbl.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Fight.cs" />
+    <Compile Include="Models\FightsContext.cs" />
     <Compile Include="Models\Groups.cs" />
     <Compile Include="Models\GroupsContext.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -316,8 +318,8 @@
       <LastGenOutput>Resource.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201511241021153_asd.resx">
-      <DependentUpon>201511241021153_asd.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201602221832354_AddFightTbl.resx">
+      <DependentUpon>201602221832354_AddFightTbl.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
