--- a/TournamentApp/TournamentApp.csproj
+++ b/TournamentApp/TournamentApp.csproj
@@ -201,6 +201,10 @@
     <Compile Include="Migrations\201602221832354_AddFightTbl.Designer.cs">
       <DependentUpon>201602221832354_AddFightTbl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201602221854121_NullsForFightTbl.cs" />
+    <Compile Include="Migrations\201602221854121_NullsForFightTbl.Designer.cs">
+      <DependentUpon>201602221854121_NullsForFightTbl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Fight.cs" />
@@ -320,6 +324,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201602221832354_AddFightTbl.resx">
       <DependentUpon>201602221832354_AddFightTbl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201602221854121_NullsForFightTbl.resx">
+      <DependentUpon>201602221854121_NullsForFightTbl.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
