--- a/TournamentApp/TournamentApp.csproj
+++ b/TournamentApp/TournamentApp.csproj
@@ -209,6 +209,14 @@
     <Compile Include="Migrations\201602221911180_RootForFightTbl.Designer.cs">
       <DependentUpon>201602221911180_RootForFightTbl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201602222000429_EditGroupForSpider.cs" />
+    <Compile Include="Migrations\201602222000429_EditGroupForSpider.Designer.cs">
+      <DependentUpon>201602222000429_EditGroupForSpider.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201602222026000_EditGroup.cs" />
+    <Compile Include="Migrations\201602222026000_EditGroup.Designer.cs">
+      <DependentUpon>201602222026000_EditGroup.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Fight.cs" />
@@ -303,6 +311,7 @@
     <Content Include="Views\Shared\DisplayTemplates\UrlBlank.cshtml" />
     <Content Include="Views\Group\Edit.cshtml" />
     <Content Include="Views\Account\Edit.cshtml" />
+    <Content Include="Views\Group\Draw.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -335,6 +344,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201602221911180_RootForFightTbl.resx">
       <DependentUpon>201602221911180_RootForFightTbl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201602222000429_EditGroupForSpider.resx">
+      <DependentUpon>201602222000429_EditGroupForSpider.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201602222026000_EditGroup.resx">
+      <DependentUpon>201602222026000_EditGroup.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
